--- a/theme.css
+++ b/theme.css
@@ -78,16 +78,10 @@ h4 {
 
 /* Ubah menjadi: */
 .layout-desktop .detailImageContainer .card {
-    display: block !important; /* POSTER DITAMPILKAN */
-    position: absolute !important;
-    right: 5% !important;
-    top: 50% !important;
-    transform: translateY(-50%) !important;
-    z-index: 100 !important;
-    width: 25vw !important;
-    max-width: 400px !important;
-    min-width: 250px !important;
+   top: calc(9em - 0px) !important;
+    width: 0.9vw !important;
 }
+
 .layout-desktop .cardImageIcon .material-icons .folder {
     display: block !important;
 }
