--- a/theme.css
+++ b/theme.css
@@ -73,7 +73,7 @@ h4 {
 }
 .layout-desktop .detailPageWrapperContainer {
     margin-top: -89vh;
-    /* inicial: 73 */
+    inicial: 73
 }
 
 /* Ubah menjadi: */
